// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Field/ScrollBox (Private) Default 1`] = `
.c1 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

.c2 {
  height: 5000px;
  background-image: linear-gradient( to right top,#051937,#004d7a,#008793,#00bf72,#a8eb12 );
}

<div
  className="c0"
>
  <ul
    className="c1"
    onReachEnd={[Function]}
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  >
    <div
      className="c2"
    />
  </ul>
</div>
`;

exports[`Storyshots Search Field/ScrollBox (Private) onReachEnd 1`] = `
.c1 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

.c2 {
  height: 5000px;
  background-image: linear-gradient( to right top,#051937,#004d7a,#008793,#00bf72,#a8eb12 );
}

<div
  className="c0"
>
  <ul
    className="c1"
    onReachEnd={[Function]}
    style={
      Object {
        "maxHeight": "50vh",
      }
    }
  >
    <div
      className="c2"
    />
  </ul>
</div>
`;

exports[`Storyshots Search Field/ScrollBox (Private) with number maxHeight 1`] = `
.c1 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

.c2 {
  height: 5000px;
  background-image: linear-gradient( to right top,#051937,#004d7a,#008793,#00bf72,#a8eb12 );
}

<div
  className="c0"
>
  <ul
    className="c1"
    onReachEnd={[Function]}
    style={
      Object {
        "maxHeight": 100,
      }
    }
  >
    <div
      className="c2"
    />
  </ul>
</div>
`;

exports[`Storyshots Search Field/ScrollBox (Private) with string maxHeight 1`] = `
.c1 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

.c2 {
  height: 5000px;
  background-image: linear-gradient( to right top,#051937,#004d7a,#008793,#00bf72,#a8eb12 );
}

<div
  className="c0"
>
  <ul
    className="c1"
    onReachEnd={[Function]}
    style={
      Object {
        "maxHeight": "50vh",
      }
    }
  >
    <div
      className="c2"
    />
  </ul>
</div>
`;
